adding support files

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ fastapi==0.110.1
 uvicorn==0.29.0
 loguru==0.7.2
 pycurl==7.45.3
+zabbix-utils==2.0.1
+python-dotenv==1.0.1
 simplejson
 python3-nmap @ git+https://github.com/nmmapper/python3-nmap@main
